--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,28 +1,29 @@
-name: FizzBuzz Tests
+name: FizzBuzz Tests  # Nom du workflow, pour identifier facilement ce qu'il fait
 
 on:
   push:
     branches:
-      - main
+      - main  # Le workflow se déclenche lorsqu'il y a un push sur la branche 'main'
   pull_request:
     branches:
-      - main
+      - main  # Le workflow se déclenche aussi lorsqu'une PR est ouverte ou mise à jour pour la branche 'main'
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
+  test:  # Le job qui va faire les tests
+    runs-on: ubuntu-latest  # Utilise la dernière version d'Ubuntu pour exécuter les tests
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - name: Checkout repository  # Étape pour récupérer le code du dépôt
+        uses: actions/checkout@v3  # Action GitHub officielle pour récupérer le code source du dépôt
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - name: Set up Python  # Étape pour configurer Python
+        uses: actions/setup-python@v4  # Action GitHub officielle pour installer Python
         with:
-          python-version: '3.9'
+          python-version: '3.9'  # Version de Python à installer (ici, la version 3.9)
 
-      - name: Install dependencies
-        run: pip install -r requirements.txt || echo "No requirements.txt found"
+      - name: Install dependencies  # Étape pour installer les dépendances nécessaires
+        run: pip install -r requirements.txt || echo "No requirements.txt found"  # Installe les paquets listés dans requirements.txt ou affiche un message si ce fichier n'est pas trouvé
 
-      - name: Run tests
-        run: python -m unittest discover tests
+      - name: Run tests  # Étape pour lancer les tests
+        run: python -m unittest discover tests  # Lance tous les tests dans le dossier 'tests' avec unittest
+
