--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: FizzBuzz Tests  # Nom du workflow
+name: FizzBuzz Tests  # Nom du workflow, pour identifier facilement ce qu'il fait
 
 on:
   push:
@@ -6,31 +6,27 @@ on:
       - main  # Le workflow se déclenche lorsqu'il y a un push sur la branche 'main'
   pull_request:
     branches:
-      - main  # Le workflow se déclenche lorsqu'une PR est ouverte ou mise à jour
+      - main  # Le workflow se déclenche aussi lorsqu'une PR est ouverte ou mise à jour pour la branche 'main'
 
 jobs:
-  test:  # Le job pour exécuter les tests
+  test:  # Le job qui va faire les tests
     runs-on: ubuntu-latest  # Utilise la dernière version d'Ubuntu pour exécuter les tests
 
     steps:
       - name: Checkout repository  # Étape pour récupérer le code du dépôt
-        uses: actions/checkout@v3  # Action GitHub pour récupérer le code source
+        uses: actions/checkout@v3  # Action GitHub officielle pour récupérer le code source du dépôt
 
       - name: Set up Python  # Étape pour configurer Python
-        uses: actions/setup-python@v4  # Action GitHub pour installer Python
+        uses: actions/setup-python@v4  # Action GitHub officielle pour installer Python
         with:
-          python-version: '3.9'  # Version de Python à installer
+          python-version: '3.9'  # Version de Python à installer (ici, la version 3.9)
 
       - name: Install dependencies  # Étape pour installer les dépendances nécessaires
-        run: |
-          pip install -r requirements.txt || echo "No requirements.txt found"
+        run: pip install -r requirements.txt || echo "No requirements.txt found"  # Installe les paquets listés dans requirements.txt ou affiche un message si ce fichier n'est pas trouvé
 
-      - name: Run tests with coverage  # Étape pour exécuter les tests avec couverture
-        run: |
-          pytest --maxfail=1 --disable-warnings -q --cov=main --cov-report=xml
+      - name: Run tests  # Étape pour lancer les tests
+        run: python -m unittest discover tests  # Lance tous les tests dans le dossier 'tests' avec unittest
 
-      - name: Upload coverage report  # Étape pour télécharger le rapport de couverture
-        uses: codecov/codecov-action@v3  # Action pour envoyer les rapports de couverture vers Codecov
-        with:
-          file: coverage.xml  # Spécifie le fichier XML généré par pytest-cov
+      - name: Upload coverage report to GitHub Pages (optional)
+        run: coverage html  # Crée un rapport HTML
 
